guide booking and request page

--- a/src/app/modules/guide/pages/guide-home/guide-home.component.scss
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.scss
@@ -1,6 +1,6 @@
 .navside {
     overflow: -moz-hidden-unscrollable;
-    // width: 250px;
+    width: 100%;
     // z-index: 1;
     // left: 0;
     // top: 45px;
