--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -1,54 +1,108 @@
 <div class="row">
   <div class="col-md-12">
-   
+
     <!--Material textarea-->
 <div class="md-form md-outline">
   <textarea type="text" id="form75" class="form-control md-textarea" rows="3" mdbInput></textarea>
   <label for="form75">Post some Blog</label>
-  <button mdbBtn type="button" color="primary" rounded="true" mdbWavesEffect style="float: right;">Send &nbsp;<i class="far fa-paper-plane"></i></button>
+  <button mdbBtn type="button" color="pink" rounded="true" mdbWavesEffect style="float: right;">Send &nbsp;<i class="far fa-paper-plane"></i></button>
 </div>
   </div>
 </div>
 <!--  -->
 
-<div *ngIf="bookingsList" class="card mt-3">
-  <div class="table-responsive card-body">
+<div *ngIf="bookingsList" class="mt-3 mb-3">
+  <div class="table-responsive">
     <div class="card-title"><h4>Your Bookings</h4></div>
     <table class="table table-hover">
       <thead >
         <tr>
           <th scope="col">Sr no.</th>
           <th scope="col">Tourist</th>
-          <th scope="col">Places</th>
+          <!-- <th scope="col">Places</th> -->
           <th scope="col">Booking Date</th>
           <th scope="col">Duration</th>
-          <th scope="col">Price</th>
-          <th scope="col">People</th>
-          <th scope="col">Group Type</th>
-          <th scope="col">Tour</th>
-          <th scope="col">Action</th>
+          <!-- <th scope="col">Price</th> -->
+          <!-- <th scope="col">People</th> -->
+          <!-- <th scope="col">Group Type</th> -->
+          <!-- <th scope="col">Tour</th> -->
+          <!-- <th scope="col">Action</th> -->
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let data of bookingsList; let i = index">
+        <tr (click)="basicModal.show()"  *ngFor="let data of bookingsList; let i = index">
           <th scope="row">{{i+1}}</th>
           <td>{{data.touristId?.name}}</td>
-          <td>{{data.places.toString()}}</td>
+          <!-- <td>{{data.places.toString()}}</td> -->
           <td>{{data.bookingDate | date: 'dd-MM-yyyy'}}</td>
           <td>{{data.duration}}</td>
-          <td>{{data.price}}</td>
-          <td>{{data.noOfPeople}}</td>
-          <td>{{data.groupType}}</td>
-          <td>{{data.tourType}}</td>
-          <td>
+          <!-- <td>{{data.price}}</td> -->
+          <!-- <td>{{data.noOfPeople}}</td> -->
+          <!-- <td>{{data.groupType}}</td> -->
+          <!-- <td>{{data.tourType}}</td> -->
+          <!-- <td>
             <button class="btn" color="info" style="margin: auto;" (click)="contactTourist(data.touristId.email)" mdbBtn type="button" size="sm" mdbWavesEffect>
               <b>CONTACT TOURIST</b>
             </button>
-          </td>
+          </td> -->
         </tr>
       </tbody>
     </table>
     </div>
+</div>
+
+
+<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Bookings</h4>
+      </div>
+      <div class="modal-body">
+       <div class="col-12 row">
+         <div class="col-4 mb-2">
+           <div class="head"><B>Name</B></div>
+           <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Booking date</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Price</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Duration</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>People</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Group Type</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Tour</B></div>
+          <div class="detail">Archit</div>
+         </div>
+
+
+       </div>
+      </div>
+      <div class="modal-footer m-0 p-0">
+        <button type="button" mdbBtn color="secondary" size="sm" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
+        <button type="button" mdbBtn color="warning" size="sm" class="relative waves-light" mdbWavesEffect>Start Tour&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
+        <button type="button" mdbBtn color="danger" size="sm" class="relative waves-light" mdbWavesEffect>Cancle Tour&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
+        <button type="button" mdbBtn color="deep-orange" size="sm" class="relative waves-light" mdbWavesEffect>Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- /table -->
 <!-- <mdb-card>
@@ -74,12 +128,12 @@
         </mdb-card-text>
 
       </div>
-      
+
 
   </mdb-card-body>
   <mdb-card-footer class="text-muted" style="height: 55px;">
       <a href="#!">View more</a>
       <button class="float-right footer-btn" style="margin: auto; " color="info" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CONTACT TOURIST</b></button>
-       <a href="..."> <i class="fas fa-phone-alt float-right"></i> </a> 
+       <a href="..."> <i class="fas fa-phone-alt float-right"></i> </a>
   </mdb-card-footer>
 </mdb-card> -->
