--- a/src/app/modules/guide/components/bookings/bookings.component.scss
+++ b/src/app/modules/guide/components/bookings/bookings.component.scss
@@ -27,3 +27,23 @@ mdb-card-text div {
 }
 
 
+.card-title{
+  font-size: 50px;
+}
+.table thead{
+  background: #553d67;
+  color: white;
+}
+body{
+  // background: #b8419062;
+}
+th , td{
+
+  border: 2px solid #553d67;
+}
+tbody td:hover , tbody th:hover{
+background: #8735977a;
+}
+tbody tr:hover{
+  background:#72295a62 !important;
+}
