--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -5,8 +5,8 @@
 
   <!--  -->
 
-<div *ngIf="requestList" class="card">
-  <div class="table-responsive card-body">
+<div *ngIf="requestList">
+  <div class="table-responsive">
     <div class="card-title"><h4>Your Requests</h4></div>
     <table class="table table-hover">
       <thead >
@@ -15,40 +15,94 @@
           <th scope="col">Tourist</th>
           <th scope="col">Places</th>
           <th scope="col">Booking Date</th>
-          <th scope="col">Duration</th>
+          <!-- <th scope="col">Duration</th>
           <th scope="col">Price</th>
           <th scope="col">People</th>
           <th scope="col">Group Type</th>
           <th scope="col">Tour</th>
-          <th scope="col">Action</th>
+          <th scope="col">Action</th> -->
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let data of requestList; let i = index">
+        <tr (click)="basicModal.show()" *ngFor="let data of requestList; let i = index">
           <th scope="row">{{i+1}}</th>
           <td>{{data.touristId.name}}</td>
           <td>{{data.places.toString()}}</td>
           <td>{{data.bookingDate | date: 'dd-MM-yyyy'}}</td>
-          <td>{{data.duration}}</td>
-          <td>{{data.price}}</td>
-          <td>{{data.noOfPeople}}</td>
-          <td>{{data.groupType}}</td>
-          <td>{{data.tourType}}</td>
-          <td>
+          <!-- <td>{{data.duration}}</td> -->
+          <!-- <td>{{data.price}}</td> -->
+          <!-- <td>{{data.noOfPeople}}</td> -->
+          <!-- <td>{{data.groupType}}</td> -->
+          <!-- <td>{{data.tourType}}</td> -->
+          <!-- <td>
             <button class="btn" (click)="acceptRequest(data._id)" color="success" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
               <b>ACCEPT</b>
             </button>
             <button class="btn" (click)="rejectRequest(data._id)" color="danger" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
               <b>REJECT</b>
             </button>
-          </td>
+          </td> -->
         </tr>
       </tbody>
+
     </table>
-    </div>  
+    </div>
+</div>
+
+<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Requests</h4>
+      </div>
+      <div class="modal-body">
+       <div class="col-12 row">
+         <div class="col-4 mb-2">
+           <div class="head"><B>Name</B></div>
+           <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Booking date</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Price</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Duration</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>People</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Group Type</B></div>
+          <div class="detail">Archit</div>
+         </div>
+         <div class="col-4 mb-2">
+          <div class="head"><B>Tour</B></div>
+          <div class="detail">Archit</div>
+         </div>
+
+
+       </div>
+      </div>
+      <div class="modal-footer m-0 p-0">
+        <button type="button" mdbBtn color="secondary" size="sm" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
+        <button type="button" mdbBtn color="green" size="sm" class="relative waves-light" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
+        <button type="button"  mdbBtn color="danger" size="sm" class="relative waves-light" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
+        <!-- <button type="button" mdbBtn color="deep-orange" size="sm" class="relative waves-light" mdbWavesEffect>Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button> -->
+      </div>
+    </div>
+  </div>
 </div>
   <!-- /table -->
-  
+
   <!-- <mdb-card >
   <div class="container1">
       <mdb-card-body>
@@ -68,7 +122,7 @@
                 <div>Price: Rs.500/hour</div>
                 <div>Duration: 5 days</div>
             </mdb-card-text>
-    
+
           </div>
 
       </mdb-card-body>
@@ -82,7 +136,7 @@
 </mdb-card>
 </div>
 
-<!-- second 
+<!-- second
 <div class="request-card" >
 
   <mdb-card>
@@ -103,9 +157,9 @@
                 <div>Price: Rs.500/hour</div>
                 <div>Duration: 5 days</div>
             </mdb-card-text>
-    
+
           </div>
-          
+
 
       </mdb-card-body>
       <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
