--- a/src/app/modules/tourists/pages/interests/interests.component.html
+++ b/src/app/modules/tourists/pages/interests/interests.component.html
@@ -26,7 +26,7 @@
   <hr>
   <div class="row my-4">
       <div class="col-6 col-md-4 col-lg-3 mb-4" (click)="addToSelectedIntList(item)" *ngFor="let item of interestsList; let i = index;">
-          <mdb-card [ngClass]="isSelected(item) ? 'active' : getGradientClass(i+1)">
+          <mdb-card [ngClass]="isSelected(item) ? 'activeClass' : getGradientClass(i+1)">
               <mdb-card-body class="waves-effect waves-light">
                   <div class="m-auto text-center white-text">
                       <h5 class="my-0">{{item}}</h5>
