guide complete login

--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -48,7 +48,7 @@
             </div>
             <div class="col-6 ">
               <div class="form-group ">
-                <label>Year</label>
+                <label>Duration (in months)</label>
                 <input type="text" class="form-control" formControlName="duration">
               </div>
             </div>
