--- a/src/app/modules/tourists/components/deals-list/deals-list.component.html
+++ b/src/app/modules/tourists/components/deals-list/deals-list.component.html
@@ -1,5 +1,6 @@
 <h2>Deals</h2>
-<app-deals-cards [dealsList]=" searchService.dealsList"></app-deals-cards>
+<!-- <app-deals-cards></app-deals-cards> -->
+<app-deals-cards [dealsList]="searchService.dealsList"></app-deals-cards>
 
 <!--<div class="row">
     <div class="col-md-4" *ngFor="let deal of searchService.dealsList">
