--- a/src/app/modules/guide/components/bookings/bookings.component.scss
+++ b/src/app/modules/guide/components/bookings/bookings.component.scss
@@ -22,28 +22,19 @@ mdb-card-text div {
 }
 .small-badge{
     display: initial;
-
-}
 }
 
+}
+.col {
+  padding: 0;
+}
 
 .card-title{
   font-size: 50px;
 }
-.table thead{
-  background: #553d67;
-  color: white;
-}
-body{
-  // background: #b8419062;
-}
-th , td{
 
-  border: 2px solid #553d67;
-}
-tbody td:hover , tbody th:hover{
-background: #8735977a;
-}
-tbody tr:hover{
-  background:#72295a62 !important;
+
+table.table th, table.table td {
+  padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
