--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <!-- main content on the right -->
-    <div class="col-12 col-lg-9 main p-5">
+    <div class="col-12 col-lg-9 main">
         <div *ngIf="ShowLoadingIndicator" class="loader">
             <span></span>
             <span></span>
